Fixed testing bug when server connection is cancelled
And simplified the setup when connecting to simulator

--- a/BTrain.xcodeproj/xcshareddata/xcschemes/BTrain.xcscheme
+++ b/BTrain.xcodeproj/xcshareddata/xcschemes/BTrain.xcscheme
@@ -42,6 +42,9 @@
             reference = "container:All.xctestplan"
             default = "YES">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:NetworkTests.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
