Refactored state machines

--- a/BTrain.xcodeproj/xcshareddata/xcschemes/BTrain.xcscheme
+++ b/BTrain.xcodeproj/xcshareddata/xcschemes/BTrain.xcscheme
@@ -48,6 +48,9 @@
          <TestPlanReference
             reference = "container:BTrain.xcodeproj/Routing.xctestplan">
          </TestPlanReference>
+         <TestPlanReference
+            reference = "container:StateMachine.xctestplan">
+         </TestPlanReference>
       </TestPlans>
       <Testables>
          <TestableReference
