--- a/BTrain.xcodeproj/xcshareddata/xcbaselines/A73AFE922726594800E1ED21.xcbaseline/Info.plist
+++ b/BTrain.xcodeproj/xcshareddata/xcbaselines/A73AFE922726594800E1ED21.xcbaseline/Info.plist
@@ -28,6 +28,30 @@
 			<key>targetArchitecture</key>
 			<string>arm64</string>
 		</dict>
+		<key>FA6E40D6-39A3-4873-B985-3EB1A2DFD249</key>
+		<dict>
+			<key>localComputer</key>
+			<dict>
+				<key>busSpeedInMHz</key>
+				<integer>0</integer>
+				<key>cpuCount</key>
+				<integer>1</integer>
+				<key>cpuKind</key>
+				<string>Apple M2</string>
+				<key>cpuSpeedInMHz</key>
+				<integer>0</integer>
+				<key>logicalCPUCoresPerPackage</key>
+				<integer>8</integer>
+				<key>modelCode</key>
+				<string>Mac14,2</string>
+				<key>physicalCPUCoresPerPackage</key>
+				<integer>8</integer>
+				<key>platformIdentifier</key>
+				<string>com.apple.platform.macosx</string>
+			</dict>
+			<key>targetArchitecture</key>
+			<string>arm64</string>
+		</dict>
 	</dict>
 </dict>
 </plist>
